# Deribit-Test-Trader

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.ps1  setup.ps1  setup_and_run.ps1
docs/: README.md
include/: connection.hpp  deribitClient.hpp  order.hpp  token.hpp
src/: connection.cpp  deribitClient.cpp  token.cpp
tests/: CMakeLists.txt  README.md  speed_test.cpp  test.ps1
